<resources>

    <string name="app_name">Biaqm</string>
    <string name="enter">כניסה</string>
    <string name="remember_me">זכור</string>
    <string name="no_correct_username_or_password">שם משתמש או סיסמה אינם נכונים</string>
    <string name="password_enter">הכנס סיסמה...</string>
    <string name="enter_password_withoudots">הכנס סיסמה</string>
    <string name="enter_username">הכנס שם משתמש</string>
    <string name="Biaqm">Biaqm</string>
    <string name="Welcome">Welcome</string>
    <string name="worker_name">שם העובד</string>
    <string name="time_not_valid">זמן לא תקין</string>
    <string name="menu">תפריט ראשי</string>
    <string name="action_write">רישום פעילות</string>
    <string name="action_preperd">תכנון פעילות</string>
    <string name="change_date">בחירת תאריך</string>
    <string name="time_change">Time selection</string>
    <string name="activities_type">סוג פעילות</string>
    <string name="activities_group_type">קבוצת סוג הפעילות</string>
    <string name="activities_type2">סוג פעילות:</string>
    <string name="block">גוש</string>
    <string name="plot">חלקה</string>
    <string name="crop">גידול</string>
    <string name="variety">זן</string>
    <string name="worker">עובד</string>
    <string name="motoring_machinery">מיכון ממונע</string>
    <string name="motoring">מיכון</string>
    <string name="Trailing_machine">מיכון נגרר</string>
    <string name="select">בחר</string>
    <string name="sector">משק</string>
    <string name="ok">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="remark">הערות</string>
    <string name="hour_count">מספר שעות</string>
    <string name="hour">שעות</string>
    <string name="Not_selected_activities">לא נבחרה פעילות</string>
    <string name="Not_selected_blocks">לא נבחר גוש</string>
    <string name="Not_selected_plots">לא נבחרה חלקה</string>
    <string name="success">הפעולה בוצעה בהצחלחה</string>
    <string name="fail">הפעולה נכשלה, נסה שוב מאוחר יותר</string>
    <string name="advanced_worker_write">רישום עובד מתקדם</string>
    <string name="uni_details">פרטים כללים</string>
    <string name="worker_quentity">כמות עובדים</string>
    <string name="enter_quentity">הכנס כמות</string>
    <string name="from_time">משעה</string>
    <string name="to_time">עד שעה</string>
    <string name="hour_quentity">כמות שעות</string>
    <string name="tfooka">תפוקה</string>
    <string name="tfooka_number">מספר יחידות תפוקה</string>
    <string name="tfooka_details">תאור תפוקה</string>
    <string name="tfooka_cost_to_one">עלות יחידת תפוקה</string>
    <string name="advanced_machine_write">רישום מיכון מתקדם</string>
    <string name="machine_name">שם המיכון</string>
    <string name="loading">המתן...</string>
    <string name="long_click_to_remove">למחיקה \nלחץ לחיצה ארוכה</string>
    <string name="text_change_remove_sync">עריכת שדה זה ישנה את המידע הנוסף</string>
    <string name="are_you_sore">האם ברצונך להמשיך?</string>
    <string name="data_change_succes">הנתונים שונו בהצלך</string>
    <string name="date_sucses_changed">תאריך שונה ל : </string>
    <string name="clear_data">ניקוי נתונים</string>

</resources>