<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_fragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" >

        <TextView
            android:id="@+id/textViewtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/advanced_worker_write"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <com.gc.materialdesign.views.ProgressBarIndeterminate
            android:id="@+id/progressBarIndeterminate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewtitle"
            android:background="@color/progress" />

        <RelativeLayout
            android:id="@+id/sub_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarIndeterminate" >

            <TextView
                android:id="@+id/textView_sub_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@color/bg_sub_titles"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="4dp"
                android:text="@string/uni_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textView_sub_title_1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/bg_sub_titles" >
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/wraper_worker_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sub_title1"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_worker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.775"
                android:prompt="@string/select" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.225"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:text="@string/worker_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_worker_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wraper_worker_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_worker_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.775"
                android:ems="10"
                android:hint="@string/enter_quentity"
                android:inputType="number"
                android:maxLength="10" >
            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.225"
                android:gravity="center"
                android:text="@string/worker_quentity"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_worker_quantity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/buttonTime_to_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/to_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <FrameLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/black" >
            </FrameLayout>

            <TextView
                android:id="@+id/buttonTime_for_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/from_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_time_pickers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <kankan.wheel.widget.WheelView
                android:id="@+id/to_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/to_mins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <FrameLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/black" >
            </FrameLayout>

            <kankan.wheel.widget.WheelView
                android:id="@+id/from_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/from_mins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_totalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_time_pickers"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editTextTimeTotal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" >
            </EditText>

            <TextView
                android:id="@+id/textView_hour_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/hour_quentity"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sub_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_totalTime" >

            <TextView
                android:id="@+id/textView_sub_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@color/bg_sub_titles"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="8dp"
                android:text="@string/tfooka"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textView_sub_title_2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/bg_sub_titles" >
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/wraper_tfooka_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sub_title2"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/Spinner_tfooka_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.775"
                android:prompt="@string/select" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.225"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:text="@string/tfooka_details"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_TfookaNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wraper_tfooka_details"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editTextTfookaNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10" >
            </EditText>

            <TextView
                android:id="@+id/textViewTfooka"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tfooka_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_TfookaCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_TfookaNum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_TfookaCost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" >
            </EditText>

            <TextView
                android:id="@+id/textView_TfookaCost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tfooka_cost_to_one"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextRemarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_TfookaCost"
            android:ems="10"
            android:gravity="top|right"
            android:hint="@string/remark"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLength="200" >
        </EditText>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/editTextRemarks"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@drawable/ic_action_done"
            android:soundEffectsEnabled="true"
            android:text="@string/ok"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>